# slimx-Agent

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: service-contract.md
slimx_agent/: __init__.py  contracts.py  engine.py  host_client.py  http_store.py  http_tools.py  planning.py  policies.py  runtime.py  service.py  store.py  tools.py
tests/: test_engine.py  test_http_boundary.py  test_package.py
