[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slimx-agent"
version = "0.12.0"
description = "SlimX-Agent: portable agent contracts, tool registry, runtime protocol, and planning schemas for the SlimX platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "SlimX AI" }]
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx>=0.27",
    "fastapi>=0.111",
]

[tool.setuptools.packages.find]
include = ["slimx_agent*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
